selfie image  corrected

--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,8 @@ html {
 }
 
 .selfie {
-  height: 350px;
-  width: 350px;
+  height: 370;
+  width: 280;
   border-radius: 50%;
   border-style: solid;
   margin: 20 auto;
